# Harraw

./: Cargo.toml  README.md  benchmark.yml  comments.yml  fmt.toml  subcomments.yml  toolchain.toml
fixtures/: transactions.csv  users.csv
src/: benchmark.rs  checker.rs  config.rs  interpolator.rs  main.rs  reader.rs  tags.rs  writer.rs
src/backend/: include.rs  mod.rs  multi_csv_request.rs  multi_file_request.rs  multi_iter_request.rs  multi_request.rs
src/service/: assert.rs  assign.rs  delay.rs  exec.rs  mod.rs  request.rs
